style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

.work-sans {
    font-family: "Work Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

/* *{
    margin: 0px;
} */
/* Shared Styles */
.display-flex {
    display: flex;
}

.bg-light {
    background-color: rgba(255, 144, 14, 0.1);
}

main {
    max-width: 1440px;
    margin: 0 auto;
}

main>section {
    margin-top: 130px;
}

/* title style */
.section-title {
    font-size: 2.5rem;
    font-weight: 700;
}

/* dark-02 */
.text-gray {
    color: #424242;
    font-size: 1.3rem;
}

/* dark-03 */
.text-light-gray {
    color: #727272;
    font-size: 1rem;
    line-height: 26px;
}

/* orange color */
.orange {
    color: #FF900E;
}

/* Primary Button */
.btn-primary {
    background-color: rgba(255, 144, 14, 1);
    color: rgba(255, 255, 255, 1);
    font-weight: 500px;
    font-size: 1.25rem;
    max-width: 180px;
    border-radius: 8px;
    border-style: none;
    padding: 20px 25px;
    cursor: pointer;
}

/* main styles */
.nav-bar {
    justify-content: space-between;
    align-items: center;
}

.nav-bar h2 {
    font-size: 3rem;
    font-weight: bold;
}

.nav-menu {
    gap: 30px;

}

.nav-list {
    list-style: none;
}

.nav-link {
    text-decoration: none;
    font-weight: 400;
    font-size: 1.3rem;
}

.nav-bar,
.banner {
    max-width: 1440px;
    margin: 0 auto;
}

/* Banner related content */
.banner-content {
    max-width: 862px;
    margin: 0 auto;
    text-align: center;
    margin-bottom: 50px;
}

.banner-content h2 {
    font-weight: bold;
    font-size: 4rem;
    color: #131313;
}

.banner-content p {
    font-size: 1rem;
    margin-bottom: 32px;
}

.banner-img {
    width: 100%;
}

/* main features */
.features {
    padding-top: 85px;
}

.features {
    align-items: center;
}

.img-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 24px;
    margin-right: 76px;
}

.feature-content {
    max-width: 537px;
}

#quick-list {
    font-weight: 400;
    color: #727272;
}

.feature-content p {
    padding-bottom: 32px;
}

.more-features {
    padding-top: 130px;
}

.cards-content h2 {
    font-size: 3rem;
    font-weight: bold;
}

.cards-content h4 {
    font-size: 1.3rem;
    font-weight: 600;

}

/* facts related styles */
.fact-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    margin-top: 100px;
    margin-left: 50px;
}

.fact {
    border: 1px solid #FF900E;
    width: 240px;
    height: 240px;
    border-radius: 8px;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.fact-name {
    font-size: 1.2rem;
    font-weight: 600;
    color: #727272;
    margin-top: 10px;
}

.fact-number {
    font-size: 2.8rem;
    font-weight: 600;
    margin-top: 5px;
    margin-bottom: 10px;
}

.fact-description {
    max-width: 540px;
}

.facts {
    margin-bottom: 180px;
}

/* our sponsors related style */
.our-support {
    max-width: 542px;
    margin: 0 auto;
    text-align: center;
}

.sponsores {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    margin-top: 50px;
    gap: 155px;
}
/* footer styles */
.footer{
    background-color: #FFF4E7;
    margin-bottom: 216px;
    height: 100px;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
}
.footer p{
   font-size: 1.3rem;
}
.hide {
    display: none !important;
}

@media screen and (max-width:576px) {

    .nav-bar,
    .nav-menu,
    .features {
        flex-direction: column;
    }

    .img-container,
    .fact-container {
        display: grid;
        grid-template-columns: 1fr;
        margin-right: 10px;
    }

    .fact-container {
        gap: 24px;
    }
.sponsores {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 30px;
}
.img-sponsors{
    width:80%;
}
.footer{
    height: 50px;
    text-align: center;
}
.footer p{
   font-size: 0.8rem;

}
}

/* medium device */
@media screen and (min-width: 576px) and (max-width:992px) {
    .img-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .features {
        flex-direction: column;
    }

    .fact-container {
        gap: 24px;
        grid-template-columns: repeat(2, 1fr);
    }
.sponsores {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 50px;
}
}

